# contraty

./: .gitignore  AGENTS.md  API.md  Dockerfile  README.md  TECH-STACK.md  docker-compose.yml  progress.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  contracts.py  router.py
backend/app/core/: config.py  limiter.py
backend/app/db/: client.py  memory.py  repository.py  schema.sql  seed.py  supabase_repo.py  vector.py
backend/app/models/: contract.py  generation.py
backend/app/services/: docx.py  llm.py  pdf.py  rag.py  template_service.py
backend/app/services/templates/: contract.css
backend/migrations/: 001_enable_pgvector.sql  001_initial_schema.sql  002_create_templates.sql  002_fix_metadata.sql  003_create_template_chunks.sql  004_create_contracts.sql  005_updated_at_trigger.sql  README.md
backend/tests/: conftest.py  test_fallback.py  test_generate.py  test_health.py  test_llm_router.py  test_pdf.py  test_repository.py  test_seed.py  test_template_service.py  test_templates.py
data/: build_descriptions.py  build_help.py  build_metadata.py  build_remaining.py  build_templates.py  fix_template.py  review_ar.py  scraper.py
frontend/: .dockerignore  .env.local.example  Dockerfile  package-lock.json  package.json  tailwind.config.js
planning/: 01-concept-and-market.md  02-ai-contract-system.md  03-data-collection-pre-work.md  04-implementation-phases.md  05-technical-specifications.md  06-contract-catalog.md  07-prompt-engineering.md  improvements.md  (+1 more)
(+108 files in other folders)
